# agentic_ai_shopping_assistant

./: .env  .gitignore  Agentic_AI_Shopping_Assistant_Master_Plan.html  Agentic_AI_Shopping_Assistant_Master_Plan.md  README.md  pyproject.toml
backend/: .env
backend/app/: main.py
backend/app/api/routers/: embeddings.py  health.py
backend/app/core/config/: settings.py
backend/app/core/exceptions/: __init__.py  base.py  handlers.py
backend/app/core/logging/: logger.py  middleware.py
backend/app/db/: init_db.py  session.py
backend/app/providers/embeddings/: __init__.py  base.py  config.py  factory.py  jina.py  local.py  registry.py
