[project]
name = "agentic-ai-shopping-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "dependency-injector>=4.49.1",
    "elasticsearch>=9.4.1",
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langgraph>=1.2.7",
    "neo4j>=6.2.0",
    "pinecone>=9.1.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "uvicorn>=0.50.2",
]

[tool.pyright]
extraPaths = ["backend"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
